# AI-Video-Generator

./: .env.example  .env.production  .env.testing  .env.wasabi  .gitignore  .gitmessage  ADVANCED_VOICE_FEATURES.md  AI_TECH_EDUCATION_GUIDE.md  API_REFERENCE.md  COMPLETE_PLATFORM_SUMMARY.md  COMPLETE_PROJECT_STATUS.md  COMPLETE_SUBJECT_INDEX.md  DEPLOYMENT.md  DEPLOYMENT_PLAN.md  DEVELOPMENT_ROADMAP.md  DOCUMENTATION.md  Dockerfile  Dockerfile.dev  EDUCATIONAL_README.md  ESSENTIAL_FILES.md  EXAMPLES.md  HOSTING_SETUP_GUIDE.md  LICENSE  LOCAL_TTS_README.md  NLP_GUIDE.md  PROJECT_SUMMARY.md  Procfile  README.md  README_CLEAN.md  README_ENHANCED.md  README_NEW.md  README_UNIVERSAL.md  RELEASE_NOTES.md  SELF_CONTAINED_VERIFICATION.md  TECHNICAL_SPECS.md  UNIVERSAL_EDUCATION_README.md  USER_GUIDE.md  VIDEO_GUIDE.md  WASABI_QUICK_SETUP.md  WASABI_SETUP_GUIDE.md  (+78 more)
audio_output/: playlist_metadata.json
deploy/: README.md  deploy.sh  dev.sh  docker-utils.sh
docs/: _config.yml  index.html
interview_output/: live_interview_education_roundtable_20250625_180240_transcript.txt  live_interview_education_roundtable_20250625_180330_transcript.txt  live_interview_innovative_teaching_20250625_180248_transcript.txt  live_interview_innovative_teaching_20250625_180336_transcript.txt  live_interview_literacy_specialists_20250625_180251_transcript.txt  live_interview_literacy_specialists_20250625_180339_transcript.txt  live_interview_metadata.json  live_interview_student_voice_panel_20250625_180245_transcript.txt  live_interview_student_voice_panel_20250625_180334_transcript.txt
(+24 files in other folders)
